feat(go): first publish

--- a/content/posts/20201106-go.md
+++ b/content/posts/20201106-go.md
@@ -1,7 +1,6 @@
 ---
 title: "Go is a beautiful game"
 date: 2020-11-06T12:33:38-05:00
-draft: true
 toc: false
 cover: img/game-of-go.png
 tags:
@@ -28,3 +27,10 @@ fully grasp everything there is to say about it. For this reason, I believe Go t
 you could play in your lifetime. It can sometimes feels like connecting into what makes us human beings.
 
 It is way more than just "an old Asian game comparable to chess".
+
+My favorite platform to play on is OGS. [Click here to view my player
+profile](https://online-go.com/player/416731/).
+
+As you will notice from my rankings, I am actually quite bad at the game. For all the praise I give this game,
+I sure wish I was a little better at it. Still, every game, whether it's a victory or a loss, feels like a
+footstep. I'm looking forward to challenge some of you down the line, just send me an invite! :smiley:
