feat(throw-45): first publication of throw 45

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -1,20 +1,21 @@
 ---
 title: "Launching something at a 45 degree angle"
 date: 2021-01-07T16:09:35-05:00
-draft: true
 toc: false
-cover:
+cover: img/throw.png
 tags:
   - physics
   - exercise
-  - algebra
   - mathjax
 ---
+# Background
 
 I recently discovered how to write equations in my Hugo website using Mathjax (credit goes to
 [kunlei](https://kunlei.github.io/2019/08/19/mathjax-setup/) for the instructions!). In order to demonstrate
 the awesomeness of this tool (and also to refresh my memory on basic Physics concepts I have not used in a
 long time), let me demonstrate why 45 degrees is the ideal angle to throw something at maximum range.
+
+# Solution
 
 First off, for simplification purposes, let us suppose the friction due to air resistance is negligible.
 
@@ -75,3 +76,24 @@ Hurray, we found our equation for $\Delta t (\theta)$, it is $\Delta t(\theta) =
 We can thus substitute this value in the earlier equation we found for $x(\theta)$:
 
 $$ x(\theta)=v\cos\theta\Delta t(\theta) = v\cos\theta\left(\frac{-2v\sin\theta}{a_y}\right) = \frac{-2v^2\cos\theta\sin\theta}{a_y}$$
+
+Let us derivate this equation:
+
+$$ \frac{dx}{d\theta} = \frac{-2v^2}{a_y}\left(-\sin^2\theta+\cos^2\theta\right) = \frac{2v^2}{a_y}\left(\sin^2\theta-\cos^2\theta\right) $$
+
+We are interested in finding $\theta_m$ for which $\frac{dx}{d\theta}=0$. In other words,
+
+$$ \frac{dx}{d\theta} = 0 = \frac{2v^2}{a_y}\left(\sin^2\theta_m-\cos^2\theta_m\right)$$
+$$ \Leftrightarrow \sin^2\theta_m = \cos^2\theta_m $$
+$$ \Leftrightarrow \frac{\sin^2\theta_m}{\cos^2\theta_m} = 1 $$
+$$ \Leftrightarrow \frac{\sin\theta_m}{\cos\theta_m} = \tan\theta_m = 1 $$
+$$ \Leftrightarrow \theta_m = \arctan(1) = \frac{\pi}{2} = 45^o \quad\blacksquare$$
+
+And there we have it, proof that the angle that maximizes the distance travelled by a thrown object is
+$\theta_m = 45^o$.
+
+# Conclusion
+
+This was a fun trip down memory lane for me. I might do this again sometime! As you can see, Mathjax is very
+good at rendering equations in HTML. Let me know if you found this interesting (maybe you're a LaTeX user, or
+maybe you're learning physics/maths). :smiley:
