fix(throw 45): spelling

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -27,7 +27,7 @@ respect to the $y$ axis.
 Intuitively, we know that if we throw the object with $\theta=0$, the object not travel any distance because
 it reaches the ground immediately. Similarly, we know that throwing the object with $\theta=90$ will have the
 same result: the object will go up in the air, and in the absence of wind, will fall back exactly from where
-it left the ground initially. Thus, the angle that maximises the distance ($\theta_m$) is an angle
+it left the ground initially. Thus, the angle that maximizes the distance ($\theta_m$) is an angle
 between 0 and 90.
 
 Naively, we can assume this function looks a little something like this:
@@ -53,7 +53,7 @@ By expressing the velocity in terms of $x$ and $y$ components (see figure above)
 
 $$ x = v\cos\theta\Delta t $$
 
-Ah ha! We are starting to unfold how $x$ is dependent of $theta$ explicitely. However, inside $\Delta t$,
+Ah ha! We are starting to unfold how $x$ is dependent of $theta$ explicitly. However, inside $\Delta t$,
 there is a hidden dependency on $theta$. Indeed, you can imagine, if we throw an object at $theta=0$, its
 airborne time will be null. On the other hand, if we throw that same object at $theta=90$, its airborne time
 will certainly be $>0$ (assuming $v \neq 0$). Thus, what is the expression for $\Delta t (\theta)$?
