fix(thrtow 45): add precision

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -30,9 +30,9 @@ same result: the object will go up in the air, and in the absence of wind, will 
 it left the ground initially. Thus, the angle that maximizes the distance ($\theta_m$) is an angle
 between 0 and 90.
 
-Naively, we can assume this function looks a little something like this:
+Naively, we can assume the $x(\theta)$ function looks a little something like this:
 
-{{< figure src="/img/x-theta.png" position="center" >}}
+{{< figure src="/img/x-theta.png" position="center" caption="The travelled distance $x$ as a function of the angle $\theta$" >}}
 
 Because the thrown object moves in a fluid motion that follows the laws of kinematics, it is reasonable to
 expect that $\theta_m$ is found exactly where the derivative of $x(\theta)$ becomes 0, that is to say
