fix(throw 45): add missing backslashes in latex commands

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -53,9 +53,9 @@ By expressing the velocity in terms of $x$ and $y$ components (see figure above)
 
 $$ x = v\cos\theta\Delta t $$
 
-Ah ha! We are starting to unfold how $x$ is dependent of $theta$ explicitly. However, inside $\Delta t$,
-there is a hidden dependency on $theta$. Indeed, you can imagine, if we throw an object at $theta=0$, its
-airborne time will be null. On the other hand, if we throw that same object at $theta=90$, its airborne time
+Ah ha! We are starting to unfold how $x$ is dependent of $\theta$ explicitly. However, inside $\Delta t$,
+there is a hidden dependency on $\theta$. Indeed, you can imagine, if we throw an object at $\theta=0$, its
+airborne time will be null. On the other hand, if we throw that same object at $\theta=90$, its airborne time
 will certainly be $>0$ (assuming $v \neq 0$). Thus, what is the expression for $\Delta t (\theta)$?
 
 Let's use the kinematics equation in the $y$ axis to get some insight.
