fix: update job title, fix footer

--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -8,6 +8,7 @@ tags:
   - exercise
   - mathjax
 ---
+{{< partial "mathjax_support" >}}
 # Background
 
 I recently discovered how to write equations in my Hugo website using Mathjax (credit goes to
