fix(freedom): fix a word

--- a/content/posts/20201016-freedom.md
+++ b/content/posts/20201016-freedom.md
@@ -5,12 +5,12 @@ author = "Félix Léger"
 cover = ""
 tags = ["personal", "rambling"]
 keywords = [""]
-description = "There's a weight on my shoulders, the crushing pressure of being being a beacon of usefulness to society. More and more, I realize that this objective is but unattainable and unhealthy."
+description = "There's a weight on my shoulders, the crushing pressure of being being a beacon of usefulness to society. More and more, I realize that this objective is both unattainable and unhealthy."
 showFullContent = false
 +++
 
 There's a weight on my shoulders, the crushing pressure of being being a beacon of usefulness to society. More
-and more, I realize that this objective is but unattainable and unhealthy.
+and more, I realize that this objective is both unattainable and unhealthy.
 
 When I started this blog, my objective was twofold:
 
