fix(freedom): a word

--- a/content/posts/20201016-freedom.md
+++ b/content/posts/20201016-freedom.md
@@ -15,7 +15,7 @@ and more, I realize that this objective is both unattainable and unhealthy.
 When I started this blog, my objective was twofold:
 
 1. Share information that people with similar interests could use
-1. Have a portfolio that demonstrates my ability to share knowledge
+1. Have a portfolio that demonstrates my ability at sharing knowledge
 
 As you might guess, while it can be healthy to focus on #1, adding #2 can quickly become unhealthy. I am
 interested in a multitude of things, but I also have many fears that prevents me from sharing them. Indeed,
