fix(edit): laughing

--- a/content/posts/20210206-laughing.md
+++ b/content/posts/20210206-laughing.md
@@ -12,7 +12,7 @@ It just occured to me that being able to genuinely laugh about something is the 
 something real. For a lot of folks, reality sucks these days. And the proportion of people finding it
 difficult to accept the cruelty of this reality keeps on growing.
 
-Life is hard.
+Life is challenging when at times you are truly convinced that humanity acts like an uncontainable virus.
 
 We need honest comedians. We need artists speaking from the heart. The are our social plumbers. They are not
 simple distractions. They help us come back to reality, accept it for what it is, and start working on solving
