--- a/content/posts/20210107-throw45.md
+++ b/content/posts/20210107-throw45.md
@@ -21,13 +21,13 @@ long time), let me demonstrate why 45 degrees is the ideal angle to throw someth
 First off, for simplification purposes, let us suppose the friction due to air resistance is negligible.
 
 If we use a referential where the $x$ axis is parallel to the ground and $y$ axis is perpendicular to the
-ground, what we want to maximum is the function $x(\theta)$, i.e. the distance travelled by our object as a
+ground, what we want to maximize is the function $x(\theta)$, i.e. the distance travelled by our object as a
 function of the angle at which we throw it. Let's define $\theta$ as the angle we throw the object with
 respect to the $y$ axis.
 
-Intuitively, we know that if we throw the object with $\theta=0$, the object not travel any distance because
-it reaches the ground immediately. Similarly, we know that throwing the object with $\theta=90$ will have the
-same result: the object will go up in the air, and in the absence of wind, will fall back exactly from where
+Intuitively, we know that an object thrown with $\theta=0$ wouldn't travel any distance because
+it would reach the ground immediately. Similarly, we know that throwing an object with $\theta=90$ would have the
+same result: the object would go up in the air, and in the absence of wind, would fall back exactly from where
 it left the ground initially. Thus, the angle that maximizes the distance ($\theta_m$) is an angle
 between 0 and 90.
 
