--- a/random-thoughts/content/posts/20210513-3.md
+++ b/random-thoughts/content/posts/20210513-3.md
@@ -1,8 +1,8 @@
 ---
-title: "And So On, Until"
+title: "And So On, Until ... "
 date: 2021-05-13T21:04:38-04:00
 ---
 
-. Eric making the duck face when I was 3 years old. The blue Dodge Viper electronic car. The red Jeep Cherokee
+... Eric making the duck face when I was 3 years old. The blue Dodge Viper electronic car. The red Jeep Cherokee
 electronic car. Blown candles. I am 3 years old.
 
