finalized random-thoughts section

--- a/random-thoughts/content/posts/20210513-3.md
+++ b/random-thoughts/content/posts/20210513-3.md
@@ -1,8 +1,11 @@
 ---
-title: "And So On, Until ... "
+title: "And So On, Until!"
 date: 2021-05-13T21:04:38-04:00
 ---
 
-... Eric making the duck face when I was 3 years old. The blue Dodge Viper electronic car. The red Jeep Cherokee
-electronic car. Blown candles. I am 3 years old.
+... The ex-lover of my aunt is making me laugh by doing the fish-face when I was 3 years old. I unwrap two electronic toy cars: a blue Dodge Viper and a red Jeep Cherokee. The candles in front of me emit smoke from their darkened wick.
+
+I am 3 years old.
+
+This is not my first random thought, but it is the furthest one I can distinctly remember.
 
