--- a/random-thoughts/content/posts/20210513-10.md
+++ b/random-thoughts/content/posts/20210513-10.md
@@ -5,6 +5,11 @@ date: 2021-05-13T22:27:49-04:00
 
 Well, turns out this theme doesn't play nice when too many posts are present. Every time I add a post, it
 stretches the page and makes it look simply ridiculous. Thus, what we had tonight was a fun experiment, but I
-think this cannot work in this current stage. Oh well, I suppose we'll just leave it for now!
+think this cannot work in this current stage. 
 
-Or should we rather go deeper?
+(I just had a scary thought: if this website looks bad on a 16:9 monitor, I'm not sure I want to know how it
+looks like on mobile!)
+
+Oh well, I suppose we'll just leave it for now!
+
+... _Or should we rather go deeper?_
