funny random thought in a random thought

--- a/random-thoughts/content/posts/20210513-10.md
+++ b/random-thoughts/content/posts/20210513-10.md
@@ -1,11 +1,11 @@
 ---
-title: "I draw the line"
+title: "I draw the line."
 date: 2021-05-13T22:27:49-04:00
 ---
 
-Well, turns out this theme doesn't play nice when too many posts are present. Every time I add a post, it
-stretches the page and makes it look simply ridiculous. Thus, what we had tonight was a fun experiment, but I
-think this cannot work in this current stage. 
+Well, turns out this theme doesn't play nice when too many posts are present. Every time I add a post,
+more buttons stupidly get crammed in the menu for a result that simply looks ridiculous. Thus, what we had tonight was a fun experiment, but I
+think this this template cannot work in the long term.
 
 (I just had a scary thought: if this website looks bad on a 16:9 monitor, I'm not sure I want to know how it
 looks like on mobile!)
