--- a/random-thoughts/content/posts/20210513-3.md
+++ b/random-thoughts/content/posts/20210513-3.md
@@ -3,7 +3,7 @@ title: "And So On, Until!"
 date: 2021-05-13T21:04:38-04:00
 ---
 
-... The ex-partner of my aunt is making me laugh by doing the fish-face. I unwrap two electronic toy cars: a blue Dodge Viper and a red Jeep Cherokee. The candles in front of me emit smoke from their darkened wick.
+... The ex-partner of my aunt is making me laugh by doing the fish-face. I am wearing black and white overalls. I unwrap two electronic toy cars: a blue Dodge Viper and a red Jeep Cherokee. The candles in front of me emit smoke from their darkened wick.
 
 I am 3 years old.
 
