--- a/content/posts/20211001-update.md
+++ b/content/posts/20211001-update.md
@@ -14,7 +14,7 @@ and wait! How have *you* been?
 I started looking at my analytics for this website and I notice that my most popular articles (by far) are
 regarding the [MiSTer FPGA](https://felixleger.com/posts/2020/10/dream-machine-mister-fpga/) and the [archival
 of RomHacking.net](https://felixleger.com/posts/2021/01/web-scraping-for-preservation/). I was absolutely
-proud of these posts, so I'm glad to see the community react in great numbers to them. Sure, the RHDN
+proud of these posts when I published them, so I'm glad to see the community react to them in great numbers. Sure, the RHDN
 community wasn't thrilled about my web scraping project (understandably), which did put a damper on things.
 You'll have to read the post for yourself if you want more details on this *dramatic* situation.
 
