added robots.txt. we're going live.

--- a/content/journal/20220102.md
+++ b/content/journal/20220102.md
@@ -71,3 +71,12 @@ ALLER CHERCHER LE SCANNER CHEZ MES PARENTS LE MÊME JOUR QUE JE VAIS PRENDRE REN
 ET FAIRE INSPECTER MA ROUE AVANT-DROITE, RIGHT??), donc vous pourrez aller trouver l'info par vous-mêmes. Bon,
 allez, salut, bonne chance (ce n'est pas facile de gaspiller une centaine de pages de papier aujourd'hui,
 hein?), et on se revoit bientôt, j'espère.
+
+P.P.P.S. (beaucoup plus tard) Je viens d'essayer d'implémenter la sécurité htpasswd, mais finalement ça ne
+fonctionne pas parce que je host mon site à partir de GitLab Pages (eh oui, toujours en train d'essayer de
+faire les choses de façon la moins chère possible. L'éternel golfeur fiscal en moi est éternel), parce que
+htpasswd nécessite Apache pour fonctionner. Eh oui! Ainsi, ce que je vais faire est de mettre un `Disallow :
+/journal/` dans mon `robots.txt` et espérer que ça fonctionne comme il faut pour que cette section ne se fasse
+pas identifier par les méchants robots qui rendrait à tâche à mes curieux lecteurs trop facile. :-) Pis si ça
+marche pas pantoute et que cette section se retrouve dans des fureteurs de recherches... ben, Hi Mom, look at
+me, this is your son on the Internet!
