j'aime ma maman

--- a/content/journal/20220102.md
+++ b/content/journal/20220102.md
@@ -1,5 +1,5 @@
 ---
-title: "20220102 Début de journal"
+title: "20220102 Bienvenue au tome 5!"
 date: 2022-01-02T19:56:02-05:00
 cover:
 tags:
@@ -79,4 +79,10 @@ htpasswd nécessite Apache pour fonctionner. Eh oui! Ainsi, ce que je vais faire
 /journal/` dans mon `robots.txt` et espérer que ça fonctionne comme il faut pour que cette section ne se fasse
 pas identifier par les méchants robots qui rendrait à tâche à mes curieux lecteurs trop facile. :-) Pis si ça
 marche pas pantoute et que cette section se retrouve dans des fureteurs de recherches... ben, Hi Mom, look at
-me, this is your son on the Internet!
+me, this is your son on the Internet! Allô! Je t'aime :)
+
+P.P.P.P.S. Failli oublié de signer:
+
+=L
+
+(- Félix)
