Ajoute petite note editoriale
Former-commit-id: 3f56dfafae8651b18f16aec9e4596097f8e5de2c

--- a/content/journal/20220102.md
+++ b/content/journal/20220102.md
@@ -23,6 +23,14 @@ mieux transmettre mes idées que sur le papier. Car oui, mon objectif avec ce jo
 objet de collection ou de convoitise. Non, mon but est de réussir à transmettre mes idées et mes réflexions
 aussi directement qu'elle me viennent. Sans toutefois avoir peur du jugement.
 
+---
+
+Note éditoriale:
+
+(Il faut savoir que j'écris beaucoup plus vite sur un clavier que sur papier. J'écris environ 100 mots par
+minute. Ainsi, même si ça donne un look final moins romantique / stéréotypique, ça me permet de vraiment
+pédaler beaucoup d'idées plus rapidement et de mieux capturer le fil de mes idées.)
+---
 Le jugement. (Je ne sais pas pourquoi j'ai commencé comme ça, mais je le garde, ça donne un certain *feel*).
 J'ai peur de me faire juger, si quelqu'un lit mes idées et les transmet aux autres.
 
