add paginate to journal section
Former-commit-id: 08381caa217d6218bf8f196f8c66dd94f0254b0a

--- a/content/journal/20220103.md
+++ b/content/journal/20220103.md
@@ -61,3 +61,9 @@ on dirait que le format que j'emprunte pour ce journal ressemble drôlement au f
 dans ses séries, telles The Final Bosman et Delayed Input. Ce sont des séries que j'adore et qui m'inspirent,
 je te les recommande fortement si tu aimes le contenu à saveur de croissance personnelle ayant pour thème le
 monde des jeux vidéo.
+
+P.P.S. Hey bonne nouvelle, je viens de trouver comment ajouter les boutons pour passer d'un post à l'autre! Il
+ne s'agissait que de copier le `layouts/posts/single.html` et de le mettre dans un `layouts/journal`. J'ai
+apporté quelques modifications, par exemple disabled les commentaires, les sharing buttons, et le timer de
+lecture dans le haut du post. Désolé si cett explication est quelque peu obscur, je me comprends. L'important,
+c'est que maintenant il est beaucoup plus facile de passer d'un post à l'autre :) Hourra!
