--- a/content/tome5/20220103-2.md
+++ b/content/tome5/20220103-2.md
@@ -12,7 +12,7 @@ Cher Journal,
 
 Je viens d'avoir une petite inspiration divine. Puisque tu es mon tome 5, je me suis dit qu'il serait
 peut-être approprié de te rendre disponible sous la section `/tome5`, plutôt que sous la section générique
-`journal/`.
+`/journal`.
 
 Pourquoi? D'abord, parce que `/tome5` est beaucoup plus difficile à trouver par hasard pour un internaute
 curieux. Ensuite, parce que "tome" est aussi bilingue que "journal". Enfin, je trouvais intéressant la
