--- a/content/tome5/20220103-2.md
+++ b/content/tome5/20220103-2.md
@@ -20,7 +20,7 @@ construction du mot "tome". Si on ajoute un petit espace, ça devient "to me". E
 sens.
 
 Ce journal, je l'écrit en m'adressant parfois à la blague à mes nombreux lecteurs. Mais en vérité, Journal,
-cet oeuvre vient de moi et je me l'offre à moi-même. Le tome 5 (ainsi que tous les tomes précédents), c'est un
+cette oeuvre vient de moi et je me l'offre à moi-même. Le tome 5 (ainsi que tous les tomes précédents), c'est un
 cadeau "from me, to me".
 
 Alors on se rejoint maintenant sur `https://felixleger.com/tome5/`! Va falloir que je corrige ce que j'avais
