--- a/content/tome5/20220103-2.md
+++ b/content/tome5/20220103-2.md
@@ -27,3 +27,6 @@ Alors on se rejoint maintenant sur `https://felixleger.com/tome5/`! Va falloir q
 écrit à la fin du tome 4, afin d'éviter des erreurs 404... lol... ça faut beaucoup de 4!
 
 =L
+
+P.S. Je viens de m'apercevoir que le timestamp automatisé de mes posts est en UTC au lieu de EST... il va
+falloir que je fix ça, car c'est quand même cool quand l'heure notée est exacte!
