j'avais mis le ps a la mauvaise place!
Former-commit-id: 2306a8015ebd80224be36860249a3b3737a998f3

--- a/content/tome5/20220103-3.md
+++ b/content/tome5/20220103-3.md
@@ -22,3 +22,7 @@ Et puis, peu importe! Problem solved! On peut aller de l'avant, maintenant! :)
 
 P.S. Cela veut donc dire que tous les posts que j'ai créés avant celui-ci ont un timestamp en UTC... Oups! Je
 vais vous laisser faire la conversion dans vos têtes. :wink:
+
+P.P.S. (20220105) On dirait finalement que toutes les heures sur les posts précédents (donc j'assume aussi sur
+le main site) sont bonnes? Aucune idée comment hugo a pu faire cet tour de magie, mais tant mieux :) Pas
+besoin de faire de conversion dans ta tête, finalement. :smile:
