--- a/content/tome5/20220103-3.md
+++ b/content/tome5/20220103-3.md
@@ -26,3 +26,6 @@ vais vous laisser faire la conversion dans vos têtes. :wink:
 P.P.S. (20220105) On dirait finalement que toutes les heures sur les posts précédents (donc j'assume aussi sur
 le main site) sont bonnes? Aucune idée comment hugo a pu faire cet tour de magie, mais tant mieux :) Pas
 besoin de faire de conversion dans ta tête, finalement. :smile:
+
+P.P.P.S. (20220105) Finalement, quand j'ai mis live sur GitLab pages, mon post de 20220105 avait 6 heures
+d'avance... je ne comprends plus rien. Je vais regler ca plus tard. :frown:
