--- a/content/tome5/20220208.md
+++ b/content/tome5/20220208.md
@@ -10,6 +10,9 @@ Hier, quelque chose de curieux est arrivé. Alexandre, le CTO Contxtful (donc mo
 demander si je me souvenais de Mathieu Frenette. C'était une connaissance que j'avais faite lorsque Contxtful
 travaillait dans les bureaux de LVL, à l'été 2018.
 
+{{< figure src="/img/merci-alex.png" position="center" caption="La courte conversation qui mènera (peut-être!) au gros changement." >}}
+
+
 En vérité, je me souvenais très bien de Mathieu. Je trouvais qu'il avait une attitude de fonceur, quelqu'un de
 très intéressant, capable et surtout intéressé à donner du mentorat. Qui plus est, c'est un DevOps senior qui
 reflète beaucoup dans le milieu de la tech, si je peux me fier à ce qu'Alex m'a dit.
