--- a/content/tome5/20220208.md
+++ b/content/tome5/20220208.md
@@ -22,6 +22,9 @@ que sa compagnie cherche présentement des gens pour former une équipe DevOps. 
 l'air d'aimer la compagnie: il a même fait un vidéo pour eux où il fait du.... bâton-fleur! Il est même très
 bon!
 
+{{< figure src="/img/nesto-recruiting.png" position="center" caption="Right place, right time. [Lien vers le vidéo](https://www.youtube.com/watch?v=YLVSAeAxgAU)." >}}
+
+
 Je ne sais pas si Alex voulait que je vois ce post ou non. Je ne sais pas quelle était son intention quand il
 m'a envoyé son message initial pour me demander si je me souvenais de Mathieu. Or, j'ai contacté Mathieu
 (pourquoi pas!) et je lui ai envoyé un vidéo de moi de 2013 où je fais du bâton-fleur à l'UdeM ([lien vers le
@@ -40,9 +43,9 @@ Ainsi, je vais le rencontrer aujourd'hui, à 12pm, virtuellement.
 C'est la première fois depuis 2017 que je considère réellement à changer d'emploi. Mathieu est quelqu'un en
 qui j'ai confiance, c'est ça la clé. Il dit que les salaires sont compétitifs chez nesto, que l'équipe est
 bonne, qu'ils sont à la pointe de la tech (et je les crois!)... Tout cela me parle. Chez Contxtful, bien qu'on
-a fait des pas de géant, j'ai l'impression qu'on stagne. On croule sous la dette technilogique. Certains
-employés n'arrivent pas à facilement corriger de mauvaises habitudes. Pour ma part, j'ai l'impression
-d'atteindre un plateau depuis quelques temps qui pourrait me ralentir dans ma carrière.
+a fait des pas de géant, j'ai l'impression qu'on stagne. On croule sous la dette technologique. Certains
+employés ne parviennent pas à corriger de mauvaises habitudes. Pour ma part, j'ai l'impression
+d'atteindre un plateau depuis quelques temps qui pourrait ralentir dans ma carrière.
 
 Ce qui me faisait (et me fait encore) hésiter à quitter Contxtful, c'est l'équipe et la confiance que j'ai
 pour l'équipe, je l'ai toujours dit. Or, je me rends maintenant compte qu'il y avait une part d'ego qui me
@@ -51,7 +54,7 @@ croyais essentiel au succès de la compagnie. En vérité, je mettais tout le po
 épaules. Je ne voulais pas "abandonner le navire" avant qu'il arrive à bon port, même si plusieurs red flags
 dans l'entreprise me disent que je reste peut-être depuis trop longtemps :
 
-- notre technologie est fragile et sujete à briser quand le web va mettre plus d'importance sur la vie privée
+- notre technologie est fragile et sujette à briser quand le web va mettre plus d'importance sur la vie privée
   (on recueille ds données sensorielles en continu, on pollue beaucoup les requêtes web, etc)
 - les gens ne sont pas capable de faire du test-driven development
 - on ne réussit pas à faire du pair programming
@@ -109,11 +112,11 @@ Bref, plus je pense, plus je constate que les raisons qui me gardaient chez Cont
 la possibilité quelle explose en bourse, bien au contraire. Peut-être que je regretterai ultimement d'être
 parti, mais je ne sais pas si je pourrais survivre un autre 3 ans d'attente de succès éclatant chez Contxtful.
 En parallèle à cela, je viens potentiellement de dénicher une opportunité en or qui me permettra d'apprendre
-de nouveaux outils, de faire table rase sur les vieux problèmes de Contxtful qui ne pèsent depuis longtemps,
+de nouveaux outils, de faire table rase sur les vieux problèmes de Contxtful qui me pèsent depuis longtemps,
 et, j'espère, d'augmenter plus rapidement mon échelle salariale.
 
 Je ne garantis pas que je vais changer d'emploi dans les mois à venir. Il me reste de sérieuses questions à
-poser à Mathieu à propos de nesto (j'ai fait [ne liste dans Google Keep à cet effet), mais disons que je vais
+poser à Mathieu à propos de nesto (j'ai fait une liste dans Google Keep à cet effet), mais disons que je vais
 le considérer sérieusement s'il me fait une offre. Je suis optimiste. Je sens un poids en moins depuis cette
 nouvelle prise de conscience. J'ai hâte de voir ce que l'avenir me réserve. C'est vraiment un potentiel
 "cadeau du ciel" qui sort de nulle part!
