--- a/content/posts/20220219-coin-go.md
+++ b/content/posts/20220219-coin-go.md
@@ -5,7 +5,7 @@ toc: false
 cover:
 tags:
   - go
-description: "A new exciting variant for the game of Go"
+description: "A new exciting variant for the game of Go!"
 ---
 
 {{< figure src="/img/coin-go.png" position="center" caption="" >}}
