--- a/content/posts/20220219-coin-go.md
+++ b/content/posts/20220219-coin-go.md
@@ -24,25 +24,27 @@ interesting asymmetries.
 
 After discussing with players online, here are the rules I propose for the Coin Go variant:
 
-> Normal rules of Go apply. In **Coin Go**, a stone cannot be played on certain intersections of the board by either player. A coin may be
-placed on these intersections as a visual aid. Stones adjacent to a coin are limited to 3 liberties (the
-fourth one being occupied by the coin).
+> In **Coin Go**, a stone cannot be played on certain intersections of the board by either player. A coin may be placed on these intersections as a visual aid. Stones adjacent to a coin are limited to 3 liberties (the fourth one being occupied by the coin).
 >
 > There are different ways to determine intersections occupied by coins:
 >
-> - Intersections are chosen (randomly or not) at the beginning of the game before either player takes a turn. A possible alternative is players alternate taking turns to place coins on the board.
+>    * Intersections are chosen (randomly or not) at the beginning of the game before either player takes a turn. A possible alternative is players take turns placing coins on the board.
 >
-> - An even number of coins is split between both players. The game begins with no coins on the board. Players may use a turn to place a coin on the board.
-> - (The two methods above can also be combined)
+>    * An even number of coins is split between both players. The game begins with no coins on the board. Players may use a turn to place a coin on the board. A possible alternative is to allow spending a coin to remove a coin from the board.
+>    * (The two methods above may also be combined)
 >
-> Coins may not be captured. For scoring, coins do not contribute to territory. Normal scoring rules apply.
+> Coins may not be captured through liberty shortage. For scoring, coins do not contribute to territory. Normal scoring rules apply.
+>
+> Since playing as Black has the potential of being a significant advantage in this variant, players may use the "Pie rule" to determine who plays which color:
+>
+>    1. Player A plays Black's first move.
+>    1. Player B decides whether to be Black or White for the remainder of the game.
+
+{{< figure src="/img/coin-go-wiki.png" position="center" caption="I have added the rules for the variant in the [corresponding Wikipedia page](https://en.wikipedia.org/wiki/Go_variants#Coin_Go)!" >}}
+
 
 Although I have not yet tried this variant myself, I'm pretty sure that it has potential, due to its
-flexibility. Forum users even suggested crazier setups:
-
-- Give an equal amount of coins (3?) to each player at the start of the game. Players may spend these coins by placing them on the board or by removing one of the coins already on the board.
-
-I have taken the liberty to edit the [Wikipedia entry for Go
+flexibility. I have taken the liberty to edit the [Wikipedia entry for Go
 variants](https://en.m.wikipedia.org/wiki/Go_variants#Coin_Go) to add Coin Go. I hope this idea will take off!
 
 Note that someone has already created a [tool that can generate images of Go boards with removed intersections
