feature coin go
Former-commit-id: 0df384874c3407468e9b32b8de56ae228eff3822

--- a/content/posts/20220219-coin-go.md
+++ b/content/posts/20220219-coin-go.md
@@ -2,6 +2,7 @@
 title: "Coin Go - A New Go Variant"
 date: 2022-02-19T14:04:18-05:00
 toc: false
+featured: "true"
 cover:
 tags:
   - go
@@ -24,7 +25,7 @@ interesting asymmetries.
 
 After discussing with players online, here are the rules I propose for the Coin Go variant:
 
-> In **Coin Go**, a stone cannot be played on certain intersections of the board by either player. A coin may be placed on these intersections as a visual aid. Stones adjacent to a coin are limited to 3 liberties (the fourth one being occupied by the coin).
+> In **Coin Go**, a stone cannot be played on certain intersections of the board by either player. A coin may be placed on these intersections as a visual aid. Stones adjacent to a coin do not have a liberty at the coin.
 >
 > There are different ways to determine intersections occupied by coins:
 >
@@ -35,7 +36,7 @@ After discussing with players online, here are the rules I propose for the Coin 
 >
 > Coins may not be captured through liberty shortage. For scoring, coins do not contribute to territory. Normal scoring rules apply.
 >
-> Since playing as Black has the potential of being a significant advantage in this variant, players may use the "Pie rule" to determine who plays which color:
+> Since playing as Black might have the potential of being a significant advantage in this variant, players may use the "Pie rule" to determine who plays which color:
 >
 >    1. Player A plays Black's first move.
 >    1. Player B decides whether to be Black or White for the remainder of the game.
@@ -43,7 +44,7 @@ After discussing with players online, here are the rules I propose for the Coin 
 {{< figure src="/img/coin-go-wiki.png" position="center" caption="I have added the rules for the variant in the [corresponding Wikipedia page](https://en.wikipedia.org/wiki/Go_variants#Coin_Go)!" >}}
 
 
-Although I have not yet tried this variant myself, I'm pretty sure that it has potential, due to its
+Although I have not yet tried this variant myself (playing games in person is rare during Covid), I'm pretty sure that it has potential, due to its
 flexibility. I have taken the liberty to edit the [Wikipedia entry for Go
 variants](https://en.m.wikipedia.org/wiki/Go_variants#Coin_Go) to add Coin Go. I hope this idea will take off!
 
