--- a/content/posts/20220219-coin-go.md
+++ b/content/posts/20220219-coin-go.md
@@ -2,7 +2,7 @@
 title: "Coin Go - A New Go Variant"
 date: 2022-02-19T14:04:18-05:00
 toc: false
-featured: "true"
+frontpage: "false"
 cover:
 tags:
   - go
