--- a/content/posts/20201106-go.md
+++ b/content/posts/20201106-go.md
@@ -21,7 +21,7 @@ As far as I know, this is the oldest board game to still be competitively played
 both rudimentary enough to invent with limited technological knowledge, yet is still deep enough that humans
 have not been able to grow out of it despite all these years.
 
-The game can be considered is almost a human constant at this point. It has existed throughout most of written human
+The game could be considered  a human constant at this point. It has existed throughout most of written human
 history. We have collectively been banging our heads on the topic of Go, and no one has been able to
 fully grasp everything there is to say about it. For this reason, I believe Go to be the most "humane" game
 you could play in your lifetime. It can sometimes feels like connecting into what makes us human beings.
