clean tags part 1

--- a/content/posts/20230318-go-art.md
+++ b/content/posts/20230318-go-art.md
@@ -1,13 +1,10 @@
 ---
 title: "Go-Inspired Art"
 date: 2023-03-18T11:18:20-04:00
-draft: false
+draft: true
 frontpage: "false"
 toc: false
 cover:
-tags:
-  - go
-  - art
 ---
 
 Drawn on Google Keep between 2022 and 2023. :smiley:
