tag cleanup part 2

--- a/content/posts/20201016-freedom.md
+++ b/content/posts/20201016-freedom.md
@@ -3,7 +3,7 @@ title = "Freedom"
 date = "2020-10-16"
 author = "Félix Léger"
 cover = ""
-tags = ["personal", "rambling"]
+tags = ["blogging"]
 keywords = [""]
 description = "There's a weight on my shoulders, the crushing pressure of being being a beacon of usefulness to society. More and more, I realize that this objective is both unattainable and unhealthy."
 showFullContent = false
