--- a/content/tome5/19960629.md
+++ b/content/tome5/19960629.md
@@ -3,5 +3,5 @@ title: "19960629"
 date: 2022-08-30T14:52:23-04:00
 ---
 
-{{< figure src="/img/running-to-meet-my-brother-19960629.jpg" position="center" caption="Je cours pour rencontrer mon frère Justin qui vient de natur naître." >}}
+{{< figure src="/img/running-to-meet-my-brother-19960629.jpg" position="center" caption="Je cours pour rencontrer mon frère Justin qui vient de naître." >}}
 
