add 2023 book collage

--- a/content/posts/20231231-2023-top-books.md
+++ b/content/posts/20231231-2023-top-books.md
@@ -3,7 +3,7 @@ title: "My 14 👍👍 Books of 2023"
 date: 2023-12-31T10:51:29-05:00
 draft: false
 toc: true
-cover:
+cover: img/book-collage-2023.png
 tags:
   - books
   - award
