--- a/content/posts/20231231-2023-top-books.md
+++ b/content/posts/20231231-2023-top-books.md
@@ -274,7 +274,7 @@ Conversation](https://coda.io/@they-win-you-win/career-conversations-tool)", a s
 questions to ask yourself or your subordinate in a 1:1 meeting in order
 to better understand where that person comes from, and where they want
 to be headed. I tried those questions on myself and I could feel their
-surgical precisions. Good stuff.
+surgical precision. Good stuff.
 
 # Wiring the Winning Organization :star:
 {{< figure src="/img/books/wiring-the-winning-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
