star at beginning of book title

--- a/content/posts/20231231-2023-top-books.md
+++ b/content/posts/20231231-2023-top-books.md
@@ -28,7 +28,7 @@ living with a partner, try to read it with them for best results. It
 will surely spark some interesting conversations!
 
 
-# Crucial Conversations :star:
+# :star: Crucial Conversations
 {{< figure src="/img/books/crucial-conversations.jpg" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-46-crucial-conversations)
@@ -97,7 +97,7 @@ shareholders, because its first objective is to ship *on time* the
 minimum that will satisfy your stakeholders. You can never re-do a first impression, and in business I believe
 most first impressions revolve around punctuality.
 
-# Sooner Safer Happier :star: {#ssh}
+# :star:  Sooner Safer Happier {#ssh}
 {{< figure src="/img/books/sooner-safer-happier.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-25-sooner-safer-happier)
@@ -163,7 +163,7 @@ Personally, I think it taught me a great deal about how to observe
 myself in public, and what bad habits to look out for, in order to have
 better working relationships.
 
-# The Fearless Organization :star:
+# :star: The Fearless Organization
 {{< figure src="/img/books/the-fearless-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-30-the-fearless-organization)
@@ -187,7 +187,7 @@ psychological safety are more efficient and more comfortable. To me,
 psychological safety really is the magic ingredient that allows us to be
 both happy and productive.
 
-# The Fifth Discipline :star: {#tfd}
+# :star: The Fifth Discipline {#tfd}
 {{< figure src="/img/books/the-fifth-discipline.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-35-the-fifth-discipline)
@@ -276,7 +276,7 @@ to better understand where that person comes from, and where they want
 to be headed. I tried those questions on myself and I could feel their
 surgical precision. Good stuff.
 
-# Wiring the Winning Organization :star:
+# :star: Wiring the Winning Organization
 {{< figure src="/img/books/wiring-the-winning-organization.png" position="center" caption="" style="height: auto; width: 100%;" >}}
 
 [Link to my original
