star radical candor

--- a/content/posts/20231231-2023-top-books.md
+++ b/content/posts/20231231-2023-top-books.md
@@ -45,7 +45,7 @@ to Action, that taught me how my (often flawed) interpretation of facts
 led me to (often unfortunate) actions. This was one of my blind spots,
 and by shedding some light on it, I think I became a better person.
 
-# Radical Candor {#rc}
+# :star: Radical Candor {#rc}
 {{< figure src="/img/books/radical-candor.jpg" position="center" caption="" style="height: auto; width: 50%;" >}}
 
 [Link to my original review](https://felixleger.com/books/book-20-radical-candor)
